# quality_flask

./: .replit  README_DESKTOP.md  app.py  app_dersa.py  app_local.py  build_executable.py  cookies.txt  database.py  dersa_ecoquality.db  desktop_config.py  enhanced_iso_compliance.py  local_database.py  main.py  models.py  package.json  pyproject.toml  replit.md  requirements_local.txt  run.py  seed_data.py  services.py  setup_desktop.py
attached_assets/: Pasted--Ceramic-Tile-Quality-Control-System-Complete-Application-Requirements-Overview-Build-a-co-1755989979778_1755989979780.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-meta-name-viewport-con-1756058550577_1756058550579.txt  Pasted--Debug-mode-off-2025-08-24-19-38-13-185-werkzeug-INFO-WARNING-This-is-a-development-ser-1756060738522_1756060738522.txt  Pasted--Flask-route-with-comprehensive-debugging-for-production-lot-creation-from-flask-import-Flask-r-1756058571712_1756058571712.txt  Pasted--Running-on-http-127-0-0-1-5000-2025-08-24-19-41-58-059-werkzeug-INFO-Press-CTRL-C-to-qui-1756060945216_1756060945217.txt  Pasted-Contexte-du-projet-D-velopper-une-application-de-gestion-et-de-contr-le-qualit-d-di-e-l-entrep-1755985242302_1755985242303.txt  Pasted-injected-js-253-POST-https-08b5ace4-12d1-4110-bdb4-09c2a747973e-00-2ba3za4adrvzq-spock-replit-dev-1755873452409_1755873452410.txt  Pasted-injected-js-253-POST-https-765632f2-fd7c-4fdf-a598-9ae175f7e813-00-2x7qe7ijqqofo-picard-replit-de-1755874536973_1755874536974.txt
data/: database.py  dersa_ecoquality.db
routes/: auth.py  energy.py  main.py  waste.py  (+3 more)
(+18 files in other folders)
